--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "migrate:invoice-counter": "node migrations/initInvoiceCounter.js"
+    "migrate:invoice-counter": "node migrations/initInvoiceCounter.js",
+    "create:admin": "node utils/createAdminUser.js"
   },
   "author": "rispit",
   "license": "ISC",
